# bodam

./: .claudeignore  .dockerignore  .env.prod.example  .env.staging.example  .gitattributes  .gitignore  .lighthouserc.js  .vercelignore  CLAUDE.local.md  DEPLOY.md  Dockerfile  LICENSE  README.md  bodam-idea.md  deploy.ps1  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  fly.toml  migrate.ps1  moai-enhancement-prompt.md
backend/: .dockerignore  .env.example  .env.fly.example  .env.prod.example  CRAWL_STATUS.md  Dockerfile  Dockerfile.postgres  Dockerfile.prod  alembic.ini  explore_nh.py  explore_nh2.py  explore_nh3.py  pyproject.toml  run_ingest.sh  startup.sh
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: __init__.py  api_investigation_results.json  auto_ingest.py  backfill_embeddings.py  check_kpub_html.py  check_rowspan.py  check_rowspan2.py  classify_unknown.py  cleanup_ingested_pdfs.py  crawl_and_ingest_axa.py  crawl_and_ingest_db.py  crawl_and_ingest_generic.py  crawl_and_ingest_hanwha.py  crawl_and_ingest_hanwha_life.py  crawl_and_ingest_heungkuk.py  crawl_and_ingest_hyundai_marine.py  crawl_and_ingest_kb.py  crawl_and_ingest_kyobo_life.py  crawl_and_ingest_lotte.py  crawl_and_ingest_meritz.py  crawl_and_ingest_mg.py  crawl_and_ingest_nh.py  crawl_and_ingest_samsung.py  crawl_and_ingest_samsung_life.py  crawl_and_ingest_shinhan_life.py  crawl_axa_general.py  crawl_constants.py  crawl_db_insurance.py  crawl_heungkuk_fire.py  crawl_hyundai_marine.py  crawl_kb_insurance.py  crawl_klia.py  crawl_life_insurance.py  (+56 more)
(+676 files in other folders)
