[project]
name = "bodam-backend"
version = "0.1.0"
description = "Bodam Insurance AI Platform - Backend API"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.135.0,<0.136.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.12.0,<2.13.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "pgvector>=0.3.6",
    "openai>=1.60.0",
    "tiktoken>=0.8.0",
    "pdfplumber>=0.11.0",
    "tenacity>=9.0.0",
    "playwright>=1.49.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "structlog>=24.0.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic[email]>=2.12.0,<2.13.0",
    "prometheus-client>=0.21.0",
    "google-generativeai>=0.8.0",
    "python-multipart>=0.0.9",
    "cryptography>=43.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "pytest-cov>=6.0.0",
    "fakeredis>=2.25.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
